unpackaged/main/default/objects/litify_pm__Lien__c/litify_pm__Lien__c.object-meta.xml
<CustomObject>
    <label>Lien</label>
    <nameField>
        <label>Lien Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>