unpackaged/main/default/objects/litify_pm__Lien__c/fields/litify_ext__Payee_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Payee_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <type>Lookup</type>
</CustomField>