unpackaged/main/default/objects/litify_pm__Lien__c/fields/litify_pm__lit_Amount_Due_Currency__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Amount_Due_Currency__c</fullName>
    <description>The total amount due after reductions are applied.</description>
    <formula>litify_pm__lit_Amount__c - litify_pm__lit_Reductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>