unpackaged/main/default/objects/litify_pm__Lien__c/fields/litify_pm__lit_Comments__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>