unpackaged/main/default/objects/litify_pm__Lien__c/fields/litify_pm__lit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Invoice__c</fullName>
    <label>Invoice #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>