unpackaged/main/default/objects/litify_pm__Lien__c/fields/litify_pm__lit_Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Matter__c</fullName>
    <description>The matter this lien applies to.</description>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>