unpackaged/main/default/objects/litify_pm__Lien__c/fields/litify_pm__lit_Reductions__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Reductions__c</fullName>
    <description>The total reduction applied to the amount due.</description>
    <label>Reductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>